--- a/pom.xml
+++ b/pom.xml
@@ -18,10 +18,18 @@
     </properties>
 
     <dependencies>
+
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
             <version>5.8.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
@@ -46,6 +54,12 @@
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-rest-assured</artifactId>
             <version>2.19.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.pantsbuild</groupId>
+            <artifactId>junit-runner</artifactId>
+            <version>1.0.30</version>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
